Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63606

Cache cannot be disabled or clear on WebEngineView

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.11.0
    • 5.9.1
    • WebEngine
    • None
    • Linux 4.10.0-35-generic #39~16.04.1-Ubuntu SMP Wed Sep 13 09:02:42 UTC 2017 x86_64 x86_64 x86_64 GNU/Linux

    Description

      Using the following QML, the cache is still activated and not cleared:

      ```
      import QtQuick 2.2
      import QtQuick.Window 2.2
      import QtWebEngine 1.5

      WebEngineView {
        id: webview
        visible: true
        url: context.getUrl()
        width: Window.width
        height: Window.height
        profile.httpCacheType: WebEngineProfile.NoCache

        onLoadingChanged: {
          if (loadRequest.errorString)

      {       console.error(loadRequest.errorString);     }

      }

        Connections {
          target: context
          onUrlChanged:

      {       profile.clearHttpCache();       webview.url = context.getUrl()     }

        }
      }
      ```
      Visiting: http://refreshyourcache.com/en/cache-test/
      the image stays red.

      The site works properly on Chromium when "disable cache" is enabled.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            davidsz Szabolcs David
            whycantiusemyemailasusername whycantiusemyemailasusername
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes