Use BrowsingDataRemover to clear HTTP cache

This is a more convenient solution to remove cache instead of
going down to the current cache backend and dooming its entries
manually. It also fixes WebCacheManager and behavior of
clearHttpCache() API on
http://refreshyourcache.com/en/cache-test/ example.

Task-number: QTBUG-63606
Change-Id: I43e5d6eb53aff66ed1b23caa2868ccfc0f4ebce1
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>