src/core/browser_context_adapter.cpp
@@ -41,6 +41,7 @@
 
 #include "content/browser/web_contents/web_contents_impl.h"
 #include "content/public/browser/browser_thread.h"
+#include "content/public/browser/browsing_data_remover.h"
 
 #include "browser_context_qt.h"
 #include "content_client_qt.h"
@@ -500,8 +501,10 @@ void BrowserContextAdapter::setHttpAcceptLanguage(const QString &httpAcceptLangu
 
 void BrowserContextAdapter::clearHttpCache()
 {
-    if (m_browserContext->url_request_getter_.get())
-        m_browserContext->url_request_getter_->clearHttpCache();
+    content::BrowsingDataRemover *remover = content::BrowserContext::GetBrowsingDataRemover(m_browserContext.data());
+    remover->Remove(base::Time(), base::Time::Max(),
+        content::BrowsingDataRemover::DATA_TYPE_CACHE,
+        content::BrowsingDataRemover::ORIGIN_TYPE_UNPROTECTED_WEB | content::BrowsingDataRemover::ORIGIN_TYPE_PROTECTED_WEB);
 }
 
 void BrowserContextAdapter::setSpellCheckLanguages(const QStringList &languages)
