src/core/web_engine_context.cpp
@@ -51,6 +51,7 @@
 #if BUILDFLAG(ENABLE_BASIC_PRINTING)
 #include "chrome/browser/printing/print_job_manager.h"
 #endif // defined(ENABLE_BASIC_PRINTING)
+#include "components/web_cache/browser/web_cache_manager.h"
 #include "content/browser/devtools/devtools_http_handler.h"
 #include "content/browser/gpu/gpu_main_thread_factory.h"
 #include "content/browser/renderer_host/render_process_host_impl.h"
@@ -491,6 +492,9 @@ WebEngineContext::WebEngineContext()
     // thread to avoid a thread check assertion in its constructor when it
     // first gets referenced on the IO thread.
     MediaCaptureDevicesDispatcher::GetInstance();
+
+    // Initialize WebCacheManager here to ensure its subscription to render process creation events.
+    web_cache::WebCacheManager::GetInstance();
 
     base::ThreadRestrictions::SetIOAllowed(true);
 
